--- a/Movie.Client/appsettings.json
+++ b/Movie.Client/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Movie": "https://localhost:5001/api/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,7 +9,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-  }
+  "AllowedHosts": "*"
 }
